--- a/src/components/projects/styles/project.css
+++ b/src/components/projects/styles/project.css
@@ -12,9 +12,10 @@
 }
 
 .project:hover {
-	background: #fafafa;
+	background: #d0cfcf;
 	opacity: 1;
-	transition: background-color 0.3s ease-in-out;
+	transform: scale(1.03);
+	transition: background-color 0.5s ease-in-out;
 }
 
 .project:hover .project-link {
@@ -27,7 +28,7 @@
 }
 
 .project-logo {
-	width: 30px;
+	width: 100%;
 }
 
 .project-logo img {
